syntax = "proto3";
package accountService;

service AccountService {
    // Company
    rpc CreateCompany (CreateCompanyRequest) returns (CreateCompanyResponse);
    rpc ListAllCompanies (ListAllCompaniesRequest) returns (ListAllCompaniesResponse);
    rpc GetCompany (GetCompanyRequest) returns (GetCompanyResponse);

    // Employee
    rpc CreateEmployee (CreateEmployeeRequest) returns (CreateEmployeeResponse);
    rpc ListAllEmployeesInCompany (ListAllEmployeesInCompanyRequest) returns (ListAllEmployeesInCompanyResponse);
    rpc GetEmployee (GetEmployeeRequest) returns (GetEmployeeResponse);
}

message Company {
    string ID = 1;
    string Name = 2;
    Address Address = 3;
    repeated ContactInfo ContactInfo = 4;
    repeated Employee Employees = 5;
}

message Address {
    string ID = 1;
    string RoadName = 2;
    int32 number = 3;
    int32 ZipCode = 4;
}

message CreateAddress {
    string RoadName = 1;
    int32 number = 2;
    int32 ZipCode = 3;
}

message ContactInfo {
    string ID = 1;
    string Title = 2;
    int32 phoneNumber = 3;
    string mail = 4;
    string CompanyID = 5;
}

message CreateContactInfo {
    string Title = 1;
    int32 phoneNumber = 2;
    string mail = 3;
}

message Employee {
    string ID = 1;
    string Name = 2;
    string CompanyID = 3;
}

message CreateCompanyRequest {
    string Name = 1;
    CreateAddress Address = 2;
    CreateContactInfo ContactInfo = 3;
}

message CreateCompanyResponse {
    string error = 1;
    Company Company = 2;
}

message ListAllCompaniesRequest {
}

message ListAllCompaniesResponse {
    string error = 1;
    repeated Company Companies = 2;
}

message GetCompanyRequest {
    string ID = 1;
}

message GetCompanyResponse {
    string error = 1;
    Company Company = 2;
}

message CreateEmployeeRequest {
    string Name = 1;
    string CompanyID = 2;
}

message CreateEmployeeResponse {
    string error = 1;
    Employee Employee = 2;
}

message ListAllEmployeesInCompanyRequest {
    string ID = 1;
}

message ListAllEmployeesInCompanyResponse {
    string error = 1;
    repeated Employee Employees = 2;
}

message GetEmployeeRequest {
    string ID = 1;
}

message GetEmployeeResponse {
    string error = 1;
    Employee Employee = 2;
}
